added tags to meals so it can be more organized
