# swagger.json
@@ -130,6 +130,9 @@
     },
     "/meals/{id}": {
       "get": {
+        "tags": [
+          "meals"
+        ],
         "description": "",
         "produces": [
           "application/json"
@@ -158,7 +161,13 @@
         }
       },
       "put": {
+        "tags": [
+          "meals"
+        ],
         "description": "",
+        "produces": [
+          "application/json"
+        ],
         "parameters": [
           {
             "name": "id",
@@ -213,10 +222,10 @@
         }
       },
       "delete": {
-        "description": "",
-        "produces": [
-          "application/json"
+        "tags": [
+          "meals"
         ],
+        "description": "",
         "parameters": [
           {
             "name": "id",
@@ -231,9 +240,6 @@
           },
           "400": {
             "description": "Bad Request"
-          },
-          "404": {
-            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
